# ImpSpec

./: .gitignore  CHANGELOG.md  ImpSpec.cabal  README.md  cabal.project  flake.nix  stack-coveralls.yaml  stack.ghc-8.10.7.yaml  stack.ghc-8.6.5.yaml  stack.ghc-8.8.4.yaml  stack.ghc-9.0.2.yaml  stack.ghc-9.2.8.yaml  stack.ghc-9.4.8.yaml
.github/workflows/: haskell.yaml
nix/: outputs.nix
src/Test/ImpSpec/: Expectations.hs  Internal.hs  Random.hs
