cabal-version:      1.18
name:               ImpSpec
version:            0.2.0.0
license:            Apache-2.0
license-file:       LICENSE
maintainer:         operations@iohk.io
author:             IOHK
homepage:           https://github.com/input-output-hk/ImpSpec
synopsis:
    Imperative approach to testing stateful applications. ImpSpec is build on top of HSpec and QuickCheck
description:
    Let a little imp help you discover all the bugs in your stateful Haskell program.
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md
tested-with:        GHC == 8.2.2
                  , GHC == 8.4.4
                  , GHC == 8.6.5
                  , GHC == 8.8.4
                  , GHC == 8.10.7
                  , GHC == 9.0.2
                  , GHC == 9.2.8
                  , GHC == 9.4.8
                  , GHC == 9.6.6
                  , GHC == 9.8.2
                  , GHC == 9.10.1

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ImpSpec

library
    exposed-modules:
        Test.ImpSpec
        Test.ImpSpec.Expectations
        Test.ImpSpec.Expectations.Lifted
        Test.ImpSpec.Main
        Test.ImpSpec.Random

    hs-source-dirs:   src
    other-modules:    Test.ImpSpec.Internal
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints

    build-depends:
        base >=4.9 && <5,
        bytestring,
        deepseq,
        hspec,
        hspec-core >=2.11,
        hspec-expectations-lifted,
        HUnit,
        mtl,
        QuickCheck,
        quickcheck-transformer,
        prettyprinter >=1.7,
        prettyprinter-ansi-terminal >=1.1.2,
        random >=1.2,
        text,
        unliftio

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    Test.Suite.ImpSpec
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints
        -threaded -rtsopts

    build-depends:
        base,
        ImpSpec

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ImpSpec
